--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "next": "~5.0.0"
   },
   "dependencies": {
-    "hoist-non-react-statics": "~2.3.1",
+    "is-empty-object": "~1.1.1",
     "sw-precache-webpack-plugin": "~0.11.4"
   }
 }
