--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "0.2.0-9",
+  "version": "0.3.2",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -41,7 +41,6 @@
     "globby": "~8.0.0",
     "is-empty-object": "~1.1.1",
     "load-json-file": "~4.0.0",
-    "sw-precache-webpack-plugin": "~0.11.4",
     "workbox-webpack-plugin": "~2.1.2"
   }
 }
