--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "1.1.0",
+  "version": "1.2.2",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -40,6 +40,9 @@
     "react": "~16.2.0"
   },
   "dependencies": {
-    "workbox-webpack-plugin": "~2.1.2"
-  }
+    "fs-extra": "~5.0.0",
+    "webpack": "~3.11.0",
+    "workbox-webpack-plugin": "~3.0.0-beta.0"
+  },
+  "devDependencies": {}
 }
