--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "2.3.0",
+  "version": "2.3.1-beta.0",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -42,7 +42,7 @@
   "dependencies": {
     "fs-extra": "~5.0.0",
     "webpack": "~3.11.0",
-    "workbox-webpack-plugin": "~3.0.0-beta.2"
+    "workbox-webpack-plugin": "~3.0.1"
   },
   "devDependencies": {}
 }
