--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "dependencies": {
     "fs-extra": "~5.0.0",
     "webpack": "~3.11.0",
-    "workbox-webpack-plugin": "~3.0.1"
+    "workbox-webpack-plugin": "~3.0.1",
+    "workbox-build": "~3.0.1"
   },
   "devDependencies": {}
 }
