--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "sw-helpers"
   ],
   "peerDependencies": {
-    "next": "^5.0.0 || ^6.0.0",
-    "react": "^16.2.0"
+    "next": "^5.0.0 || ^6.0.0"
   },
   "dependencies": {
     "fs-extra": "~5.0.0",
