--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fs-extra": "~5.0.0",
     "glob": "~7.0.0",
     "minimist": "1.2.0",
+    "url-join": "^4.0.0",
     "webpack": "~3.11.0",
     "workbox-build": "~3.2.0",
     "workbox-webpack-plugin": "~3.2.0"
