--- a/package.json
+++ b/package.json
@@ -47,5 +47,14 @@
     "workbox-build": "~3.2.0",
     "workbox-webpack-plugin": "~3.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "husky": "^0.14.3",
+    "prettier": "^1.14.2",
+    "pretty-quick": "^1.6.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
