--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "glob": "~7.0.0",
     "minimist": "1.2.0",
     "webpack": "~3.11.0",
-    "workbox-build": "~3.2.0",
-    "workbox-webpack-plugin": "~3.2.0"
+    "workbox-build": "^3.5.0",
+    "workbox-webpack-plugin": "^3.5.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
