--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "sw-helpers"
   ],
   "peerDependencies": {
-    "next": "^5.0.0 || ^6.0.0"
+    "next": "^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "dependencies": {
     "copy-webpack-plugin": "~4.5.2",
