--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "authors": [
     "Jack Hanford"
   ],
+  "contributors": [
+    "Joao Vieira <joaoguerravieira@gmail.com>"
+  ],
   "tags": [
     "react",
     "next.js",
@@ -36,22 +39,19 @@
     "sw-helpers"
   ],
   "peerDependencies": {
-    "next": "^5.0.0 || ^6.0.0 || ^7.0.0"
+    "next": ">=7.0.0"
   },
   "dependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "~4.5.2",
-    "fs-extra": "~5.0.0",
-    "glob": "~7.0.0",
-    "minimist": "1.2.0",
-    "webpack": "~3.11.0",
-    "workbox-build": "^3.5.0",
-    "workbox-webpack-plugin": "^3.5.0"
+    "fs-extra": "~7.0.0",
+    "glob": "~7.1.3",
+    "workbox-webpack-plugin": "^3.6.1"
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "prettier": "^1.14.2",
-    "pretty-quick": "^1.6.0"
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.7.0"
   },
   "husky": {
     "hooks": {
