--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "copy-webpack-plugin": "~4.5.2",
     "fs-extra": "~7.0.0",
     "glob": "~7.1.3",
+    "webpack": "^4.19.1",
     "workbox-webpack-plugin": "^3.6.1"
   },
   "devDependencies": {
