--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "fs-extra": "~7.0.0",
     "glob": "~7.1.3",
     "webpack": "^4.19.1",
-    "workbox-webpack-plugin": "^3.6.1"
+    "workbox-webpack-plugin": "3.6.3"
   },
   "devDependencies": {
     "husky": "^0.14.3",
