--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "index.js",
     "next-manifest.js",
     "plugin.js",
-    "register.js",
+    "register-sw.js",
     "service-worker.js",
     "readme.md",
     "package.json"
