--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "3.0.10",
+  "version": "3.0.11-beta.0",
   "main": "index.js",
   "license": "MIT",
   "repository": {
