--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/hanford/next-offline.git"
   },
+  "scripts": {
+    "test": "cd tests && yarn test"
+  },
   "bugs": "https://github.com/hanford/next-offline/issues",
   "authors": [
     "Jack Hanford"
