--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "next-offline",
-  "version": "3.1.0",
+  "version": "3.2.0-beta.1",
   "main": "index.js",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/hanford/next-offline.git"
+  },
+  "scripts": {
+    "test": "cd tests && yarn test"
   },
   "bugs": "https://github.com/hanford/next-offline/issues",
   "authors": [
