--- a/examples/now2/package.json
+++ b/examples/now2/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "next": "^7.0.2",
-    "next-offline": "^3.2.2",
+    "next-offline": "3.3.0-beta.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
