--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "3.2.2",
+  "version": "3.3.0-beta.0",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "https://github.com/hanford/next-offline.git"
   },
   "scripts": {
-    "test": "cd tests && yarn test"
+    "test": "cd examples/tests && yarn test"
   },
   "bugs": "https://github.com/hanford/next-offline/issues",
   "authors": [
