--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "fs-extra": "~7.0.0",
     "glob": "~7.1.3",
     "webpack": "^4.19.1",
-    "workbox-webpack-plugin": "3.6.3"
+    "workbox-webpack-plugin": "^4.0.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
