--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "3.4.0",
+  "version": "4.0.0-beta.1",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -50,7 +50,7 @@
     "fs-extra": "~7.0.0",
     "glob": "~7.1.3",
     "webpack": "^4.19.1",
-    "workbox-webpack-plugin": "3.6.3"
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
     "husky": "^0.14.3",
