--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "4.0.0-beta.1",
+  "version": "4.0.0",
   "main": "index.js",
   "license": "MIT",
   "repository": {
