add next-export example
refs #150

--- a/examples/next-export/package.json
+++ b/examples/next-export/package.json
@@ -1,9 +1,9 @@
 {
   "name": "create-next-example-app",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "export": "next build && next export"
   },
   "dependencies": {
     "next": "^8.1.0",
