--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "copy-webpack-plugin": "~4.5.2",
     "fs-extra": "~7.0.0",
     "webpack": "^4.19.1",
-    "workbox-webpack-plugin": "next"
+    "workbox-webpack-plugin": "5.0.0-alpha.1"
   },
   "devDependencies": {
     "husky": "^0.14.3",
