Adding + updating test coverage to cover more cases

--- a/examples/next-export/package.json
+++ b/examples/next-export/package.json
@@ -2,13 +2,13 @@
   "name": "create-next-example-app",
   "scripts": {
     "dev": "next",
+    "dev:prodlike": "yarn export && serve -p 3000 ./out",
     "build": "next build",
-    "export": "next build && next export",
-    "dev:prodlike": "yarn export && serve -p 3000 ./out"
+    "export": "next build && next export"
   },
   "dependencies": {
     "next": "^8.1.0",
-    "next-offline": "https://github.com/derekdowling/next-offline#0270acd",
+    "next-offline": "https://github.com/derekdowling/next-offline#7292d7c",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "serve": "^11.0.1"
