Workbox v5 Alpha + Pre-cache Simplification (#158)
* Upgrading to Workbox v5 Alpha and optimizing pre-cache configuration for Next

* Upgrading tests yarn lock to Workbox v5

* Upgrading to v5 Alpha.1

* Upgrading tests to Alpha.1 Workbox + next-offline

* Upgrading examples to use next-offline alpha, updating config/commands to allow for local testing of SW logic

* Upgrading examples/tests to latest next-offline commit

* Adding prodlike run mode to static export example for local testing of SW

* Updating docs/comments, trying importsDirectory change to ensure Workbox build artifacts end up in the correct static asset location

* Adding + updating test coverage to cover more cases

* Upgrading tests + examples to latest working commit

* Adds a custom swDest test case and better documents when export.js is used

--- a/examples/next-export/package.json
+++ b/examples/next-export/package.json
@@ -2,13 +2,15 @@
   "name": "create-next-example-app",
   "scripts": {
     "dev": "next",
+    "dev:prodlike": "yarn export && serve -p 3000 ./out",
     "build": "next build",
     "export": "next build && next export"
   },
   "dependencies": {
     "next": "^8.1.0",
-    "next-offline": "latest",
+    "next-offline": "https://github.com/derekdowling/next-offline#d3230ea",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "serve": "^11.0.1"
   }
 }
