--- a/examples/now2/package.json
+++ b/examples/now2/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "next": "^8.1.0",
-    "next-offline": "^4.0.2",
+    "next-offline": "https://github.com/derekdowling/next-offline#d3230ea",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
