--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "index.js",
     "export.js",
     "next-manifest.js",
-    "plugin.js",
     "register-sw.js",
     "service-worker.js",
     "runtime.js"
@@ -54,12 +53,10 @@
     "next": ">=7.0.0"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "~4.5.2",
     "fs-extra": "~7.0.0",
-    "glob": "~7.1.3",
     "webpack": "^4.19.1",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "5.0.0-alpha.1"
   },
   "devDependencies": {
     "husky": "^0.14.3",
