--- a/examples/next-export/package.json
+++ b/examples/next-export/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "next": "^8.1.0",
-    "next-offline": "https://github.com/derekdowling/next-offline#d3230ea",
+    "next-offline": "^5.0.0-alpha.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "serve": "^11.0.1"
