--- a/packages/next-export-example/package.json
+++ b/packages/next-export-example/package.json
@@ -1,7 +1,7 @@
 {
   "name": "next-export-example",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "dev": "next",
     "dev:prodlike": "yarn export && serve -p 3000 ./out",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "^9.0.3",
-    "next-offline": "^5.0.0-alpha.0",
+    "next-offline": "^5.0.0-beta.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "serve": "^11.0.1"
