--- a/packages/next-offline/package.json
+++ b/packages/next-offline/package.json
@@ -50,6 +50,6 @@
   "dependencies": {
     "copy-webpack-plugin": "~4.5.2",
     "fs-extra": "~7.0.0",
-    "workbox-webpack-plugin": "5.0.0-alpha.2"
+    "workbox-webpack-plugin": "^5.0.0-beta.0"
   }
 }
