--- a/packages/now2-example/package.json
+++ b/packages/now2-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "now2-example",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "dev": "next",
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "next": "^9.0.3",
-    "next-offline": "^5.0.0-beta.5",
+    "next-offline": "^5.0.0-6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
