--- a/packages/next-offline/package.json
+++ b/packages/next-offline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-offline",
-  "version": "5.0.0-6.0",
+  "version": "5.0.0-beta.6",
   "main": "index.js",
   "license": "MIT",
   "files": [
