--- a/packages/next-export-example/package.json
+++ b/packages/next-export-example/package.json
@@ -1,7 +1,7 @@
 {
   "name": "next-export-example",
   "private": true,
-  "version": "1.0.9",
+  "version": "1.0.10",
   "scripts": {
     "dev": "next",
     "dev:prodlike": "yarn export && serve -p 3000 ./out",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "^9.1.3",
-    "next-offline": "^5.0.0-beta.11",
+    "next-offline": "^5.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "serve": "^11.2.0"
