--- a/packages/now1-example/package.json
+++ b/packages/now1-example/package.json
@@ -1,7 +1,7 @@
 {
   "name": "now-1example",
   "private": true,
-  "version": "1.0.9",
+  "version": "1.0.10",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "^9.1.3",
-    "next-offline": "^5.0.0-beta.11",
+    "next-offline": "^5.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   }
