--- a/packages/now2-example/package.json
+++ b/packages/now2-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "now2-example",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "private": true,
   "scripts": {
     "dev": "next",
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "next": "^9.1.3",
-    "next-offline": "^5.0.0-beta.11",
+    "next-offline": "^5.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   }
