--- a/packages/next-offline/package.json
+++ b/packages/next-offline/package.json
@@ -48,7 +48,7 @@
     "webpack": "^4.19.1"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^6.4.1",
+    "copy-webpack-plugin": "~5.1.2",
     "fs-extra": "~8.1.0",
     "workbox-webpack-plugin": "^5.0.0"
   }
